workspace-sf/force-app/main/default/objects/GrupoProfissoes__c/GrupoProfissoes__c.object-meta.xml
<CustomObject>
    <description>Objeto de relacionamento entre profissões de grupos de risco.</description>
    <label>Risco da Profissão</label>
    <nameField>
        <label>Nome de Grupo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Riscos da Profissão</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>