workspace-sf/force-app/main/default/objects/GrupoProfissoes__c/fields/CodigoProfissao__c.field-meta.xml
<CustomField>
    <fullName>CodigoProfissao__c</fullName>
    <formula>Profissao__r.CodigoProfissao__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código da Profissão</label>
    <type>Text</type>
</CustomField>