workspace-sf/force-app/main/default/objects/GrupoProfissoes__c/fields/GrupoRisco__c.field-meta.xml
<CustomField>
    <fullName>GrupoRisco__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grupo de Risco</label>
    <referenceTo>GrupoRisco__c</referenceTo>
    <relationshipName>GruposProfissoes</relationshipName>
    <type>Lookup</type>
</CustomField>