workspace-sf/force-app/main/default/objects/GrupoProfissoes__c/fields/Profissao__c.field-meta.xml
<CustomField>
    <fullName>Profissao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Profissão</label>
    <referenceTo>Profissao__c</referenceTo>
    <relationshipName>GruposProfissoes</relationshipName>
    <type>Lookup</type>
</CustomField>