workspace-sf/force-app/main/default/objects/GrupoProfissoes__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>GrupoRisco__c</columns>
    <columns>Profissao__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>